--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -7,7 +7,6 @@
   margin: 0 1rem;
   display: flex;
   flex-direction: row;
-  border-bottom: 1px solid $mercury;
 
   @include tablet {
     padding-bottom: 1rem;
@@ -15,8 +14,7 @@
   }
 
   @include desktop {
-    width: 52%;
-    margin: 0 auto;
+    margin: 0 0 0 2.25rem;
   }
 
   &__image {
@@ -140,7 +138,14 @@
     }
 
     @include tablet {
-      width: 12rem;
+      width: 10.5rem;
     }
+
+    @include desktop {
+      margin-right: 2.25rem;
+    }
+  }
+  @include desktop {
+    margin-left: 8.3rem;
   }
 }
