--- a/src/components/aside/asideitem/AsideItem.scss
+++ b/src/components/aside/asideitem/AsideItem.scss
@@ -9,17 +9,25 @@
     margin-bottom: 3.25rem;
   }
 
+  @include desktop {
+    // width: 60%;
+  }
+
   &__container {
     display: flex;
     gap: 1rem;
     margin: 1rem 1rem;
-    height: 5.5rem;
+    height: 4.4rem;
 
     &:hover {
       cursor: pointer;
     }
     @include tablet {
-      margin: 0 2.25rem 2.25rem 2.25rem;
+      margin: 0 2.25rem 1.5rem 2.25rem;
+    }
+
+    @include desktop {
+      margin: 0 6.8rem 1.3rem 2.25rem;
     }
   }
 
@@ -30,12 +38,12 @@
     justify-content: space-between;
 
     @include tablet {
-      width: 11rem;
+      width: 10rem;
     }
   }
 
   &__image {
-    width: 9.3rem;
+    width: 7.2rem;
     height: 100%;
     background: $mercury;
 
@@ -46,14 +54,14 @@
   &__title {
     color: $silver;
     font-weight: 600;
-    margin: 1.5rem 0 1.5 1rem;
+    margin: 1.5rem 0 1.5rem 1rem;
 
     font-size: 0.813rem;
     font-weight: 600;
     line-height: 1.25;
 
     @include tablet {
-      margin: 2rem 0 2rem 2.25rem;
+      margin: 2rem 0 1.2rem 2.25rem;
     }
   }
 
@@ -61,7 +69,7 @@
     font-size: 0.813rem;
     color: $primary-black;
     font-weight: 600;
-    margin: 0 0 1rem 0;
+    margin: 0;
 
     @include tablet {
       font-size: 0.875rem;
