--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -5,7 +5,11 @@
 .nav {
   margin: 1rem;
   @include tablet {
-    margin: 1rem 2.25rem 1rem 2.25rem;
+    margin: 1.5rem 2.25rem 1.5rem 2.25rem;
+  }
+
+  @include desktop {
+    margin: 1.5rem 6.8rem 1.5rem 6.8rem;
   }
 
   &__outer-container {
@@ -46,7 +50,7 @@
         color: $primary-black;
       }
       @include tablet {
-        margin: 0 2rem 0 0;
+        margin: 0 1.6rem 0 0;
         width: 15rem;
         height: 2.25rem;
       }
@@ -102,8 +106,8 @@
     }
 
     @include tablet {
-      width: 9.375rem;
-      margin-right: 2rem;
+      width: 10.5rem;
+      margin-right: 1.6rem;
 
       &:hover {
         background-color: $secondary-blue;
