--- a/src/components/video-player/VideoPlayer.scss
+++ b/src/components/video-player/VideoPlayer.scss
@@ -17,5 +17,9 @@
     @include tablet {
       margin: 0 2.25rem;
     }
+
+    @include desktop {
+      margin: 0 12.2rem;
+    }
   }
 }
