--- a/src/components/video/video.scss
+++ b/src/components/video/video.scss
@@ -27,6 +27,9 @@
       line-height: 2.75rem;
       margin: 1.5rem 2.25rem 1rem 2.25rem;
     }
+    @include desktop {
+      margin-left: 6.8rem;
+    }
   }
 
   &__subtitle {
@@ -87,16 +90,20 @@
     margin: 0 1rem;
     @include tablet {
       border-top: none;
-      margin: 0 2.25rem;
+      margin: 0 0 0 2.25rem;
       padding-top: 0;
       justify-content: space-between;
+    }
+
+    @include desktop {
+      margin-left: 6.8rem;
     }
   }
 
   &__inner-container {
     display: flex;
     align-items: center;
-    margin-right: 5rem;
+    margin-right: 2rem;
 
     &--margin {
       @include tablet {
@@ -116,6 +123,10 @@
     margin: 0 1rem;
     @include tablet {
       margin: 0 2.25rem;
+    }
+
+    @include desktop {
+      margin-left: 6.8rem;
     }
   }
 }
